; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_subr/extr_mergeinfo.c_svn_mergeinfo_inheritable2.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_subr/extr_mergeinfo.c_svn_mergeinfo_inheritable2.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i64 }

@SVN_NO_ERROR = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @svn_mergeinfo_inheritable2(i32* %0, i32 %1, i8* %2, i32 %3, i32 %4, i32 %5, i32* %6, i32* %7) #0 {
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i8*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32*, align 8
  %16 = alloca i32*, align 8
  %17 = alloca i32*, align 8
  %18 = alloca i32, align 4
  %19 = alloca i8*, align 8
  %20 = alloca i32, align 4
  %21 = alloca %struct.TYPE_8__*, align 8
  %22 = alloca %struct.TYPE_8__*, align 8
  store i32* %0, i32** %9, align 8
  store i32 %1, i32* %10, align 4
  store i8* %2, i8** %11, align 8
  store i32 %3, i32* %12, align 4
  store i32 %4, i32* %13, align 4
  store i32 %5, i32* %14, align 4
  store i32* %6, i32** %15, align 8
  store i32* %7, i32** %16, align 8
  %23 = load i32*, i32** %15, align 8
  %24 = call i32 @apr_hash_make(i32* %23)
  store i32 %24, i32* %18, align 4
  %25 = load i32*, i32** %16, align 8
  %26 = load i32, i32* %10, align 4
  %27 = call i32* @apr_hash_first(i32* %25, i32 %26)
  store i32* %27, i32** %17, align 8
  br label %28

28:                                               ; preds = %73, %8
  %29 = load i32*, i32** %17, align 8
  %30 = icmp ne i32* %29, null
  br i1 %30, label %31, label %76

31:                                               ; preds = %28
  %32 = load i32*, i32** %17, align 8
  %33 = call i8* @apr_hash_this_key(i32* %32)
  store i8* %33, i8** %19, align 8
  %34 = load i32*, i32** %17, align 8
  %35 = call i32 @apr_hash_this_key_len(i32* %34)
  store i32 %35, i32* %20, align 4
  %36 = load i32*, i32** %17, align 8
  %37 = call %struct.TYPE_8__* @apr_hash_this_val(i32* %36)
  store %struct.TYPE_8__* %37, %struct.TYPE_8__** %21, align 8
  %38 = load i8*, i8** %11, align 8
  %39 = icmp ne i8* %38, null
  br i1 %39, label %40, label %45

40:                                               ; preds = %31
  %41 = load i8*, i8** %11, align 8
  %42 = load i8*, i8** %19, align 8
  %43 = call i64 @svn_path_compare_paths(i8* %41, i8* %42)
  %44 = icmp eq i64 %43, 0
  br i1 %44, label %45, label %54

45:                                               ; preds = %40, %31
  %46 = load %struct.TYPE_8__*, %struct.TYPE_8__** %21, align 8
  %47 = load i32, i32* %12, align 4
  %48 = load i32, i32* %13, align 4
  %49 = load i32, i32* %14, align 4
  %50 = load i32*, i32** %15, align 8
  %51 = load i32*, i32** %16, align 8
  %52 = call i32 @svn_rangelist_inheritable2(%struct.TYPE_8__** %22, %struct.TYPE_8__* %46, i32 %47, i32 %48, i32 %49, i32* %50, i32* %51)
  %53 = call i32 @SVN_ERR(i32 %52)
  br label %58

54:                                               ; preds = %40
  %55 = load %struct.TYPE_8__*, %struct.TYPE_8__** %21, align 8
  %56 = load i32*, i32** %15, align 8
  %57 = call %struct.TYPE_8__* @svn_rangelist_dup(%struct.TYPE_8__* %55, i32* %56)
  store %struct.TYPE_8__* %57, %struct.TYPE_8__** %22, align 8
  br label %58

58:                                               ; preds = %54, %45
  %59 = load %struct.TYPE_8__*, %struct.TYPE_8__** %22, align 8
  %60 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %59, i32 0, i32 0
  %61 = load i64, i64* %60, align 8
  %62 = icmp ne i64 %61, 0
  br i1 %62, label %63, label %72

63:                                               ; preds = %58
  %64 = load i32, i32* %18, align 4
  %65 = load i32*, i32** %15, align 8
  %66 = load i8*, i8** %19, align 8
  %67 = load i32, i32* %20, align 4
  %68 = call i32 @apr_pstrmemdup(i32* %65, i8* %66, i32 %67)
  %69 = load i32, i32* %20, align 4
  %70 = load %struct.TYPE_8__*, %struct.TYPE_8__** %22, align 8
  %71 = call i32 @apr_hash_set(i32 %64, i32 %68, i32 %69, %struct.TYPE_8__* %70)
  br label %72

72:                                               ; preds = %63, %58
  br label %73

73:                                               ; preds = %72
  %74 = load i32*, i32** %17, align 8
  %75 = call i32* @apr_hash_next(i32* %74)
  store i32* %75, i32** %17, align 8
  br label %28

76:                                               ; preds = %28
  %77 = load i32, i32* %18, align 4
  %78 = load i32*, i32** %9, align 8
  store i32 %77, i32* %78, align 4
  %79 = load i32*, i32** @SVN_NO_ERROR, align 8
  ret i32* %79
}

declare dso_local i32 @apr_hash_make(i32*) #1

declare dso_local i32* @apr_hash_first(i32*, i32) #1

declare dso_local i8* @apr_hash_this_key(i32*) #1

declare dso_local i32 @apr_hash_this_key_len(i32*) #1

declare dso_local %struct.TYPE_8__* @apr_hash_this_val(i32*) #1

declare dso_local i64 @svn_path_compare_paths(i8*, i8*) #1

declare dso_local i32 @SVN_ERR(i32) #1

declare dso_local i32 @svn_rangelist_inheritable2(%struct.TYPE_8__**, %struct.TYPE_8__*, i32, i32, i32, i32*, i32*) #1

declare dso_local %struct.TYPE_8__* @svn_rangelist_dup(%struct.TYPE_8__*, i32*) #1

declare dso_local i32 @apr_hash_set(i32, i32, i32, %struct.TYPE_8__*) #1

declare dso_local i32 @apr_pstrmemdup(i32*, i8*, i32) #1

declare dso_local i32* @apr_hash_next(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
